<!--
  ~  Copyright (c) 2024 by Vincent Gerlach. All rights reserved.
  ~
  ~  SPDX-License-Identifier: GPL-3.0-or-later
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  in the root folder of this project with the name LICENSE. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">ImageInference</string>
    <string name="title_photo_camera">Photo Camera</string>
    <string name="title_video_camera">Video Camera</string>
    <string name="title_image">Image</string>
    <string name="title_menu">Menu</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_last_image">Select last image.</string>
    <string name="select_next_image">Select next image.</string>
    <string name="select_image_from_list">Select image from list.</string>
    <string name="selected_image_for_inference">Selected image for inference.</string>
    <string name="video_record">Record</string>
    <string name="photo_capture">Capture</string>
    <string name="captured_image_for_inference">Captured image for inference.</string>
    <string name="selection_menu">Selection menu</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="preview_to_capture">Preview of the image to capture</string>
    <string name="photo_clear">Clear</string>
    <string name="preview_real_time_inference">Preview of the real-time recording whereupon inference is executed.</string>
    <string name="video_background_preview">The background image if the preview needs to load.</string>
    <string name="stop">Stop</string>
    <string name="inference_failed">Inference Failed!</string>
    <string name="no_data">No Data!</string>
    <string name="add_collection">Add Collection</string>
    <string name="change_collection">Change Collection</string>
    <string name="remove_collection">Remove Collection</string>
    <string name="name">Name</string>
    <string name="default_image">Default Image</string>
    <string name="matches_name_image">Shows the image that matches the name of the image.</string>
    <string name="inference_running">Inference running</string>
    <string name="inference_successful">Inference successful</string>
    <string name="selected_model">Selected Model</string>
    <string name="select_a_model">Select a Model</string>
    <string name="select_image">Select Image</string>
    <string name="inference_time">Inference Time</string>
    <string name="frames_per_second">Frames Per Second</string>
    <string name="settings">Settings</string>
    <string name="benchmark">Benchmark</string>
    <string name="select_a_model_to_start_inference">Select a model to start inference!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="selected_collection">Selected Collection</string>
    <string name="save_benchmark">Save Benchmark</string>
    <string name="run_benchmark">Run Benchmark</string>
    <string name="run">Run</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="show_help_information">Show help information.</string>
    <string name="benchmark_help">Benchmark Help</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_remove_the_collection">Are you sure you want to remove the collection: \'%1$s\'?</string>
    <string name="ok">OK</string>
    <string name="benchmark_help_text">This screen allows you to benchmark the model with the selected image collection.\nThe benchmark will run the model on each image in the collection.\nThe benchmark results will be stored depending on the collection. Therefore benchmark results of different models are stored with the same collection.</string>
    <string name="cancel_benchmark">Cancel Benchmark</string>
    <string name="inference_was_cancelled">Inference was cancelled!</string>
    <string name="average_time">Average Time</string>
    <string name="minimum_time">Minimum Time</string>
    <string name="maximum_time">Maximum Time</string>
    <string name="top_1_accuracy">Top 1 Accuracy</string>
    <string name="top_5_accuracy">Top 5 Accuracy</string>
    <string name="processed_images">Processed Images</string>
    <string name="warmup_samples_count">Warmup Samples Count</string>
    <string name="warmup_preference_summary">How many samples should be used for warmup?</string>
</resources>
