<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  SPDX-FileCopyrightText: © 2024 Vincent Gerlach
  ~
  ~  SPDX-License-Identifier: MIT
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/image_selection_menu_add"
        android:title="@string/add" />

    <item
        android:id="@+id/image_selection_menu_remove"
        android:title="@string/remove" />

    <item
        android:id="@+id/image_selection_menu_change_collection"
        android:title="@string/change_collection" />

    <item
        android:id="@+id/image_selection_menu_add_collection"
        android:title="@string/add_collection" />

    <item
        android:id="@+id/image_selection_menu_remove_collection"
        android:title="@string/remove_collection" />


</menu>
