<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2024 by Vincent Gerlach. All rights reserved.
  ~
  ~  SPDX-License-Identifier: GPL-3.0-or-later
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  in the root folder of this project with the name LICENSE. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_photo_camera"
        android:icon="@drawable/ic_photo_camera_google"
        android:title="@string/title_photo_camera" />

    <item
        android:id="@+id/navigation_video_camera"
        android:icon="@drawable/ic_video_camera_google"
        android:title="@string/title_video_camera" />

    <item
        android:id="@+id/navigation_image"
        android:icon="@drawable/ic_image_google"
        android:title="@string/title_image" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_google"
        android:title="@string/title_menu" />

</menu>
