<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2024 by Vincent Gerlach. All rights reserved.
  ~
  ~  SPDX-License-Identifier: GPL-3.0-or-later
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  in the root folder of this project with the name LICENSE. If not, see <http://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_photo_camera">

    <fragment
        android:id="@+id/navigation_photo_camera"
        android:name="com.neuralnetwork.imageinference.ui.photoCamera.PhotoCameraFragment"
        android:label="@string/title_photo_camera"
        tools:layout="@layout/fragment_photo_camera" />

    <fragment
        android:id="@+id/navigation_video_camera"
        android:name="com.neuralnetwork.imageinference.ui.videoCamera.VideoCameraFragment"
        android:label="@string/title_video_camera"
        tools:layout="@layout/fragment_video_camera" />

    <fragment
        android:id="@+id/navigation_image"
        android:name="com.neuralnetwork.imageinference.ui.image.ImageFragment"
        android:label="@string/title_image"
        tools:layout="@layout/fragment_image" />
    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.neuralnetwork.imageinference.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />
</navigation>
