<?xml version="1.0" encoding="utf-8"?><!--
  ~  SPDX-FileCopyrightText: © 2024 Vincent Gerlach
  ~
  ~  SPDX-License-Identifier: MIT
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/model_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_model"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/average_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/average_time_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/average_time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/average_time_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="10000 ns"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/min_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/min_time_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/minimum_time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/min_time_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="1000 ns"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/max_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_time_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/maximum_time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/max_time_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="50000 ns"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/counter_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/processed_images"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/counter_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="500"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/top1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/top1_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/top_1_accuracy"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/top1_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="0 %"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/top5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/top5_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/top_5_accuracy"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/top5_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="0 %"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
